--- a/ms/src/main/resources/application.properties
+++ b/ms/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8083
+server.port=8083
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
@@ -13,7 +13,7 @@ spring.datasource.password=1234
 #Mostrar el log con secuencias sql ejecutadas por Spring Data JPA
 spring.jpa.show-sql=true                                                                          
 
-#Definición del Dialect para MySql
+#DefiniciÃ³n del Dialect para MySql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= none
 logging.level.org.hibernate.SQL=debug
