--- a/ms/src/main/resources/application.properties
+++ b/ms/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
 #Url para la conexion a la base de datos MySql
-spring.datasource.url=jdbc:mysql://mysql.microservice.svc:3306/ejpractica
+spring.datasource.url=jdbc:mysql://mysql.urgel.svc:3306/ejpractica
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #Usuario y password de conexxion a la base de datos
